<resources>
    <string name="app_name">NewsApp</string>
    <string name="search">Search</string>
    <string name="mainActivity_title">The Guardian - News</string>
    <string name="noDataMsg">No data found</string>
    <string name="check_connection_msg">It seems your device is offline. Please check your internet connection.</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_date_label">Publication Date</string>
    <string name="settings_category_others_label">Other</string>
    <string name="settings_value_not_defined">Not defined</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <!-- Label for order-by Relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Most Recent</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Strings For minimum date Preference [CHAR LIMIT=30] -->
    <string name="settings_min_date_label">Minimum Publication Date</string>
    <string name="settings_min_date_key" translatable="false">min_date</string>
    <string name="settings_min_date_default" translatable="false">01/01/2018</string>

    <!-- Strings For maximum date Preference [CHAR LIMIT=30] -->
    <string name="settings_max_date_label">Maximum Publication Date</string>
    <string name="settings_max_date_key" translatable="false">max_date</string>
    <string name="settings_max_date_default" translatable="false">""</string>

    <!-- Strings For Production Office Preference [CHAR LIMIT=30] -->
    <string name="settings_production_office_label">Production Office</string>
    <string name="settings_production_office_key" translatable="false">production_office</string>
    <string name="settings_production_office_default" translatable="false">@string/settings_production_office_All_value</string>

    <!-- Label for Production Office ALL option [CHAR LIMIT=20] -->
    <string name="settings_production_office_All_label">All</string>
    <string name="settings_production_office_All_value" translatable="false">all</string>
    <!-- Label for Production Office UK option [CHAR LIMIT=20] -->
    <string name="settings_production_office_UK_label">UK</string>
    <string name="settings_production_office_UK_value" translatable="false">uk</string>
    <!-- Label for Production Office USA option [CHAR LIMIT=20] -->
    <string name="settings_production_office_US_label">USA</string>
    <string name="settings_production_office_US_value" translatable="false">us</string>
    <!-- Label for Production Office Australia option [CHAR LIMIT=20] -->
    <string name="settings_production_office_AUS_label">Australia</string>
    <string name="settings_production_office_AUS_value" translatable="false">aus</string>

    <!-- Strings For Section Preference [CHAR LIMIT=30] -->
    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">@string/settings_section_All_value</string>

    <!-- Label for Section ALL option [CHAR LIMIT=20] -->
    <string name="settings_section_All_label">All</string>
    <string name="settings_section_All_value" translatable="false">all</string>
    <!-- Label for Section Business option [CHAR LIMIT=20] -->
    <string name="settings_section_business_label">Business</string>
    <string name="settings_section_business_value" translatable="false">business</string>
    <!-- Label for Section Music option [CHAR LIMIT=20] -->
    <string name="settings_section_music_label">Music</string>
    <string name="settings_section_music_value" translatable="false">music</string>
    <!-- Label for Section Politics option [CHAR LIMIT=20] -->
    <string name="settings_section_politics_label">Politics</string>
    <string name="settings_section_politics_value" translatable="false">politics</string>
    <!-- Label for Section Sport option [CHAR LIMIT=20] -->
    <string name="settings_section_sport_label">Sport</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>


</resources>
